Bug 1520957 - [release 119] [Editor] add overflow-anchor:none as a temporary fix (#7740). r=dwalsh
UltraBlame original commit: 83af92e6dcf5d00f95d4e5124e8e6ade0ea6022b

--- a/devtools/client/debugger/new/src/components/Editor/Editor.css
+++ b/devtools/client/debugger/new/src/components/Editor/Editor.css
@@ -169,6 +169,30 @@ important
 ;
 }
 .
+CodeMirror
+.
+cm
+-
+s
+-
+mozilla
+.
+CodeMirror
+-
+scroll
+.
+CodeMirror
+-
+sizer
+{
+overflow
+-
+anchor
+:
+none
+;
+}
+.
 theme
 -
 dark
